--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
-
+/*@import url(pruebas.css);*/
 
 body {
   font-family: "Heebo", sans-serif;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
- 
+  box-sizing: border-box; 
+}
+body::-webkit-scrollbar{
+  width: 10px;
+}
+body::-webkit-scrollbar-thumb{
+  background: #02936f;
 }
 header {
   width: 100%;
@@ -237,10 +242,10 @@ header label{
   }
   
 }
-.container {
+/*.container {
   max-width: 1300px;
-  margin: 0 auto;
-}
+  margin:
+}*/
 
 .slider {
   width: 100%;
@@ -267,7 +272,7 @@ header label{
   width: 100%;
   height: 100%;
 }
-@media (min-width: 768px) {
+@media (min-width: 1518px) {
   .slider img {
     height: 655px;
   }
@@ -298,7 +303,9 @@ header label{
   align-items: center;
   display: flex;  
   margin-left: 65px;
-  position:relative;
+  position: relative;
+  width: auto;
+  /*background-color: antiquewhite;*/
 }
 .Nosotros{
   width: 200%;
@@ -307,6 +314,7 @@ header label{
   grid-template-columns: repeat(2, 1fr);
   grid-gap:50px 30px;
   margin-left: 40px;
+  /*background-color:aqua;*/
 }
 .Nosotros .info{  
   align-items: center;
@@ -334,18 +342,19 @@ header label{
   justify-content: center;
 }
 @media (max-width:991px){
+  
   .Nosotros .info{
       margin-left: -140px;
       margin-right: 6px;
   }
   .Nosotros .foto{
-      margin: -55px;
+      margin-left: -109px;
       margin-top: -70px;
-  }
-}
+    }
+ }
 @media (max-width:991px){
   .Nosotros {
-      width: 90%;
+      width: 64%;
       grid-template-columns: 1fr;
   }
 }
@@ -353,24 +362,27 @@ header label{
 #Opciones{
   /*background-color: yellowgreen;*/
   text-align: center;
-  /*max-width: 1300px;*/
+  max-width: 1519px;
 }
 #Opciones .contOpc{  
+  /*background-color: yellow;*/
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 25px;
+  max-width: 1519px;
+
 }
 .opcion1{
   background-color: #D1F7F0;
-  width: 618px;  
-  height: 649px;  
+  width: 550px;  
+  height: 636px;  
   text-align: left;
   justify-content: left;
-  margin-top: 15px;    
+  margin-top: 10px;
+  margin-left: 100px;  
+  margin-right: 100px;
   float: left;
-  margin: 20px;
-  
 }
 .opcion1 h3{
   text-align: center;
@@ -379,12 +391,12 @@ header label{
 }
 .opcion1 p{
   text-align: center;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 43px;
+  margin-right: 43px;
   font-size: 18px; 
 }
 .opcion1 button{    
-  margin-left: 270px;
+  margin-left: 230px;
   margin-top: 20px;
   background-color: #A2E7D6;
   width: 100px;
@@ -393,16 +405,15 @@ header label{
   font-weight:bold;
 }
 .opcion1 img{
-  width: 621px;
+  width: 547px;
 }
 .opcion2{
   background-color: #D1F7F0;
-  width: 620px;  
-  height: 649px;  
+  width: 550px;  
+  height: 636px;  
   text-align: right;
   justify-content: right;
-  margin-top: 20px;
-  
+  margin-top: 10px;
   float: right;
 }
 .opcion2 h3{
@@ -412,12 +423,12 @@ header label{
 }
 .opcion2 p{
   text-align: center;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: 43px;
+  margin-right: 43px;
   font-size: 18px;     
 }
 .opcion2 button{    
-  margin-right: 255px;
+  margin-right: 205px;
   margin-top: 20px;
   background-color: #A2E7D6;
   width: 120px;
@@ -426,42 +437,199 @@ header label{
   font-weight:bold;
 }
 .opcion2 img{
-  width: 305px;
+  width: 260px;
 
+}
+@media (max-width:991px){
+  .opcion1{
+    background-color: #D1F7F0;
+    width: 400px;  
+    height: 610px;  
+    text-align: left;
+    justify-content: left;
+    margin-top: 10px;
+   /* margin-left: 100px;  */
+    /*margin-right: 100px;*/
+    float: left;
+  }
+  .opcion1 button{    
+    margin-left: 160px;
+    margin-top: 20px;
+    background-color: #A2E7D6;
+    width: 100px;
+    height: 35px;
+    border-color: #A2E7D6;
+    font-weight:bold;
+  }
+  .opcion1 img{
+    width: 400px;
+  }
+  .opcion2{
+    background-color: #D1F7F0;
+    width: 400px;  
+    height: 636px;  
+    text-align: right;
+    justify-content: right;
+    margin-top: 10px;
+    float: right;
+  }
+  .opcion2 button{    
+    margin-right: 140px;
+    margin-top: 20px;
+    background-color: #A2E7D6;
+    width: 120px;
+    height: 40px;
+    border-color: #A2E7D6;
+    font-weight:bold;
+  }
+  .opcion2 button:active{
+    background:#03ab81;
+  }
+  .opcion2 img{
+    width: 200px;
+    margin-top: -20px;
+  }
+  .dudas{
+    background-color:#03ab81;
+    padding-left: 30px;  
+    margin-top: 30px;
+    padding-top: 7px;
+    height: 140px;
+    width: 453px;
+    
+  }
 }
 .footer{
-  
   justify-content: center;
-  
   align-items: center;
-
+  /*background-color: antiquewhite;*/
 }
 .contacto{
-  
+  /*background-color: antiquewhite;*/
+
   margin-left: 30px;
-  
 }
 .contacto h2{
   color: #03ab81; 
-  margin-top: 10px; 
+  margin-top: 25px; 
   padding-top: 10px;
+
 }
 .dudas{
-  background-color:#D1F7F0;
+  background-color:#03ab81;
   padding-left: 30px;  
   margin-top: 30px;
   padding-top: 7px;
   height: 140px;
- 
+  /*width: 1489.5px;*/
+  
 }
 .dudas h3{
-  color: #03ab81; 
+  color: black; 
 }
 .dudas p{
   margin-top: -10px;
   margin-bottom: 10px;
 }
 
+/*ADOPTA
+Ya contamos con las billeteras digitales más conocidas para seguir apoyando
+¡!*/
+/*body#apoyanos {
+  overflow: visible;
+  background-color: antiquewhite;
+  display: block;
+  height: auto;
+}
+body#apoyanos::-webkit-scrollbar{
+  overflow: visible;
+  width: 15px;
+}
+body#apoyanos::-webkit-scrollbar-thumb{
+  overflow: visible;
+  background: #03ab81;
+}*/
+/*#central{
+  padding: 0;
+  margin-top: 5px;
+}
+#central p{
+  font-size: 40px;
+  margin-right: 55px;
+  margin-left: 40px;
+  margin-top: 30px;
+  color:#02936f;
+  text-decoration:underline;
+  text-align: center;
+}
+.codigos{
+  background-color: aquamarine;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+#central #yape {
+  width: 200px;
+  margin-left: 545px;
+}
+#central #plin {
+  width: 215px;
+  margin-left: 40px;
+}
 
-
+.texto{
+  margin-top: 20px;
+  width: 800px;
+  margin-left: 350px;
+  border-color: #000;  
+  border-width: 5px;
+  border-style: solid; 
+  
+}
+.texto p{
+  font-size: 25px;
+  margin: 15px;
+}
+@media (max-width:991px){
+  body#apoyanos {
+    overflow:visible;
+    background-color: antiquewhite;
+    display: block;
+  }
+  #central{
+    padding: 0;
+    margin-top: 5px;
+  }
+  #central p{
+    font-size: 20px;
+    margin-right: 25px;
+    margin-left: 10px;
+    margin-top: 30px;
+    color:#02936f;
+    text-decoration:underline;
+    text-align: center;
+  }
+  .codigos{
+    background-color: aquamarine;
+    margin-left: 0px;
+    margin-right: 30px;
+  }
+  #central #yape {
+    width: 100px;
+    margin-left: 120px;    
+  }
+  #central #plin {
+    width: 115px;
+    margin-left: 40px;
+  }
+}
+/*@media(min-width:1400px){
+  #central #yape {
+    width: 150px;
+    margin-left: 120px;    
+  }
+  #central #plin {
+    width: 165px;
+    margin-left: 40px;
+  }
+}*/
 
