--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
-@import url(menu.css);
 
-body {
+body{
   font-family: "Heebo", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  margin: 0;  
  
+  padding: 0;
+  box-sizing: border-box; 
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar{
+  width: 10px;
+}
+body::-webkit-scrollbar-thumb{
+  background: #02936f;
 }
 header {
   width: 100%;
@@ -15,8 +22,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color:white;
-  position: fixed;
+  background-color:white; 
   top: 0;
   left: 0;
   z-index: 100;
@@ -142,4 +148,148 @@ header label{
         display: none;
     }
 }
+/*.barraSup .menu nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  float: right;
+}
+.barraSup .menu nav a {
+  text-decoration: none;
+  font-weight: 100;
+  padding-right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-left: 80px;
+}
+.barraSup .menu nav a:after {
+  content: "";
+  position: absolute;
+  background-color: #03ab81;
+  height: 3px;
+  width: 0;
+  left: 20;
+  bottom: 675px;
+  transition: 0.3s;
+  justify-content: space-around;
+}
+.barraSup .menu nav a:hover {
+  color: #000;
+}
+.barraSup .menu nav a:hover:after {
+  width: 6.5%;
+}*/
+/*.barraSup nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto;
+  margin-top: 24px;
+  size: 20px;
+  
+}
+.barraSup nav a{    
+  text-decoration: none;
+  font-weight: 100;
+  padding-right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-left: 80px;
+  color: #03ab81;
+}
+.barraSup nav a:after{
+  content: "";
+  position: absolute;
+  background-color: #03ab81;
+  height: 3px;
+  width: 0;
+  left: 20;
+  bottom: 10px;
+  transition: 0.3s;
+  justify-content: space-around;
+}
+.barraSup nav a:hover{
+  color: #000;
+}
+.barraSup nav a:hover:after{
+  width: 6.5%;   
+}*/
+@media(max-width:991px){
+  .menu{
+      padding: 10px;
+  }
+  .menu-bar label{
+      display: initial;
+  }
+  .barraSup{
+      padding: 0px 0;
+  }
+  .menu .nav{
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background-color: rgb(70, 70, 121);
+      display: none;
+  }
+  .menu nav a{
+    width: 100%;
+  }
+  #menu:checked ~ .nav{
+    display: initial;
+  }  
+}
+.titulo h1{
+  justify-content: center;
+  color:#03ab81;
+  margin-left: 440px;
+  font-size: 35px;
+  margin-right: 5px;
+}
+#info{
+background: #03ab8121;
+color:#03ab81;
+text-align: center;
+padding: 35px;
+margin-left: -20px;
+}
+#info .contenedor{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: -20px;
+}
+.info-pet{
+  margin: 30px;
+}
+.info-pet img{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 9px solid #03ab81;
+}
 
+@media(max-width:991px){
+  .titulo h1{
+    
+    margin-left: 5px;
+    font-size: 30px;
+    
+  }
+}
+  
+ 
+  
+  
+
+
+
+
+
+
+
+  
+  
