--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
 
 
 
@@ -32,7 +32,7 @@ header{
    margin-top: 25px;
    
 }
-.logo img {
+.logo img{
     height: 70px;
     align-items: center;
     margin-right: 450px;
@@ -43,8 +43,6 @@ header{
     align-items: center;
     justify-content: space-around;
     margin: auto;
-  
-    
 }
 .barraSup nav a{    
     text-decoration: none;
@@ -54,9 +52,6 @@ header{
     align-items: center;
     justify-content: space-around;
     margin-left: 80px;  
-    
-    
-      
 }
 .barraSup nav a:after{
     content: "";
@@ -71,12 +66,10 @@ header{
 }
 .barraSup nav a:hover{
     color: #000;
-    
 }
 .barraSup nav a:hover:after{
     width: 6.5%;   
 }
-
 .slider{
     width: 100%;
     height: 100%;
@@ -214,4 +207,4 @@ header{
 .opcion2 img{
     width: 305px;
 
-}
+}*/
